# test_tech_hoortrade

./: .coverage  .coveragerc  .env.bak  .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  init.sh  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: main.yml
accounts/: serializers.py  urls.py  views.py
cinema/: admin.py  apps.py  filters.py  models.py  serializers.py  views.py
cinema/migrations/: 0001_initial.py  0002_initial.py  0003_movie_adult_content_movie_original_language_and_more.py  0004_movie_source.py  0005_alter_movie_source.py  0006_alter_movie_unique_together.py  0007_remove_movie_rating.py
core/: middlewares.py  models.py  pagination.py  settings.py  urls.py  views.py
core/tests/: test_api_root.py
docker/: Dockerfile  docker-compose.yml  postgresql.yml  rabbitmq.yml  valkey.yml
movies/: admin.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_initial.py  0003_movie_movie_rating_movie_status.py  0004_movie_created_at_movie_updated_at.py  0005_alter_movie_movie_rating.py  0006_remove_movie_movie_rating_alter_movie_rating.py  0007_remove_movie_author_movie_author.py  0008_review_authorreview_moviereview.py  0009_review_created_by.py  0010_alter_authorreview_options_alter_moviereview_options_and_more.py  0011_remove_movie_is_active_alter_review_rating.py  0012_rename_author_movie_authors_remove_movie_genre_and_more.py
users/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_baseuser_date_of_birth.py  (+2 more)
(+10 files in other folders)
