[project]
name = "tech_test_hoortrade"
version = "0.1.0"
description = "A Python package for Hoortrade technical test"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "django>=5.2.3",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "isort>=6.0.1",
    "markdown>=3.8.1",
    "pillow>=11.2.1",
    "psycopg>=3.2.9",
]
